# npt

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile
docs/: devel.md
gpt/: __init__.py  _db.py  _log.py  cli.py  pipelines.py  query.py  raster.py  search.py
gpt/datasets/: __init__.py  ctx.py
gpt/isis/: __init__.py  _sh.py  calibration.py  format.py  mosaic.py  projection.py
gpt/pds/: __init__.py  ode.py
gpt/pipelines/: __init__.py  download.py  processing.py  search.py
gpt/utils/: __init__.py  download.py  filenames.py  formaters.py  formatters.py  geojson.py  io.py  raster.py
notebooks/: 1_search_ode.ipynb  2_download_pds.ipynb  3_reduce_images.ipynb  4_mosaic_images.ipynb  5-1_mars_images_adam.ipynb  5-2_mars_craters_plot.ipynb  HRSC_footprints_report.ipynb  Mawrth_Vallis_ODE_products_contain.geojson  Mawrth_Vallis_ODE_products_intersect.geojson  Mawrth_Vallis_downloaded_sample_products.geojson  Mawrth_Vallis_reduced_sample_products_ctx.geojson  Untitled.ipynb  env.sh  search_ode.ipynb
notebooks/HRSC_footprints_report/: HRSC_footprints_report.html
notebooks/example_data/: Mawrth_Vallis_ODE_products_intersect.geojson  Mawrth_Vallis_downloaded_sample_products.geojson  Mawrth_Vallis_reduced_sample_products_hirise.geojson  Mawrth_Vallis_reduced_sample_products_hrsc.geojson  search_ctx.geojson  search_hirise.geojson  search_hrsc.geojson
notebooks/prototypes/: README.md
notebooks/prototypes/env/: environment.yml  requirements.txt
notebooks/prototypes/format_footprint_to_DB_geojson/: format_footprint_to_DB_geojson.ipynb
notebooks/prototypes/gpt/: __init__.py  pipelines.py
npt/: __init__.py  _db.py  _log.py  _version.py  cli.py  query.py  search.py
npt/datasets/: __init__.py
npt/download/: __init__.py  _pds.py
npt/isis/: __init__.py  _docker.py  _sh.py  calibration.py  format.py  mosaic.py  projection.py
npt/mosaic/: __init__.py
npt/pds/: ode.py
npt/pipelines/: __init__.py  download.py  mosaic.py  processing.py  search.py
npt/reduce/: __init__.py
npt/search/: __init__.py  _ode.py  ode.py
npt/utils/: __init__.py  _gdal.py  _rasterio.py  _xarray.py  download.py  formatters.py  geojson.py  raster.py  tmpdir.py
snippets/html/: leaflet_wms.html
snippets/python/: validate_cog.py
tests/: test_download.py  test_pipelines.py  test_search.py
(+20 files in other folders)
