[metadata]
name = gpt
author = Carlos H. Brandt
description = Geo-Planetary Processing Tools
version = file: gpt/__version__.py
url = https://github.com/chbrandt/gpt

keywords =
  geosciences
  mosaic
  isis3
  pds
  geopandas

classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering

license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = gpt
zip_safe = False
install_requires =
    geopandas
    requests
    sh
    shapely
    tqdm
