[metadata]
name = npt
author = Carlos H. Brandt
description = Geo-Planetary Processing Tools
version = file: npt/__version__.py
url = https://github.com/chbrandt/npt

keywords =
  geosciences
  mosaic
  isis3
  pds
  geopandas

classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering

license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
install_requires =
    click >= 7.1.2
    geopandas >= 0.8.1
    requests >= 2.24
    sh >= 1.14
    tqdm >= 4.49
    rasterio >= 1.2.10
    rioxarray >= 0.10.3
