[metadata]
name = npt
author = Carlos H. Brandt
description = Geo-Planetary Processing Tools
url = https://github.com/chbrandt/npt

keywords =
  geopandas
  geosciences
  planetary
  mosaic
  isis3
  usgs

classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering

license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
install_requires =
    click >= 7.1.2
    geopandas >= 0.8.1
    requests >= 2.24
    sh >= 1.14
    tqdm >= 4.49
    rasterio >= 1.2.10
    rioxarray >= 0.10.3

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = npt/_version.py
versionfile_build = npt/_version.py
tag_prefix =
parentdir_prefix = npt-
